--- a/nodetest1/package.json
+++ b/nodetest1/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "express": "3.4.1",
     "jade": "*",
-	"mongodb": "1.3.10"
+	  "mongodb": "1.3.10",
+    "underscore": "1.4.4"
   }
 }
